src/objects/Provider__c.object
<CustomObject>
    <fields>
        <fullName>Fax_QCSI__c</fullName>
        <description>Provider&apos;s Fax Number</description>
        <label>Fax QCSI</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Provider&apos;s Full Name</description>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Provider&apos;s Phone Number</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referral_Provider_Fax__c</fullName>
        <description>Referral Provider Fax</description>
        <label>Referral Provider Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referral_Provider_Name__c</fullName>
        <description>Referral Provider Name</description>
        <label>Referral Provider Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Provider</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ENMCAT{00000}</displayFormat>
        <label>Entity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>